<resources>
    <string name="app_name">حماة الوطن</string>
    <string name="email">عنوان البريد الإلكتروني</string>
    <string name="password">كلمة المرور</string>
    <string name="signup">إنشاء حساب</string>
    <string name="login">تسجيل الدخول</string>
    <string name="date_of_birth">تاريخ الميلاد (يوم/شهر/سنة)</string>
    <string name="cin_number">رقم CIN</string>
    <string name="verify">تحقق</string>
    <string-array name="submission_types">
        <item>انضمام</item>
        <item>اعتراض</item>
    </string-array>

    <string-array name="gender_array">
        <item>ذكر</item>
        <item>أنثى</item>
    </string-array>

    <string-array name="status_array">
        <item>مؤهل</item>
        <item>استدعاء محكمة</item>
        <item>مذكرة اعتقال</item>
        <item>معفى</item>
    </string-array>
    <string-array name="citizen_status">
        <item>Eligible</item>
        <item>Court</item>
        <item>Warrant</item>
        <item>Exempt</item>
    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">مرحبا أيها الجزء الفارغ</string>
    <string name="note">اترك ملاحظة</string>
    <string name="document_url">رابط المستند</string>
    <string name="todo">مهام</string>
    <string name="about_us">معلومات عنا</string>
    <string name="log_out">تسجيل الخروج</string>
    <string name="view_submission">عرض التقديمات</string>
    <string name="citizen_details">تفاصيل المواطن</string>
    <string name="citizen_mangement">إدارة المواطنين</string>
    <string name="citizen_list">قائمة المواطنين:</string>
    <string name="aministration">إدارة</string>
    <string name="citizen">مواطن</string>
    <string name="submission_details">تفاصيل التقديم</string>
    <string name="documents">المستندات:</string>
    <string name="submission_statue">حالة التقديم</string>
    <string name="citizen_status">حالة المواطن</string>
    <string name="save">حفظ</string>
    <string name="submission_list">قائمة التقديمات</string>
    <string name="userdata">بيانات المستخدم</string>
    <string name="new_submission">إرسال جديد</string>
    <string name="pick_file">اختر ملف</string>
    <string name="attach_documents">إرفاق المستندات:</string>
    <string name="submit">إرسال</string>
    <string name="submissions">التقديمات</string>
    <string name="invalid_cin_number">رقم الهوية غير صالح</string>
    <string name="invalid_birthdate">تاريخ الميلاد غير صالح</string>
    <string name="the_birthdate_does_not_match_our_records">تاريخ الميلاد لا يتطابق مع سجلاتنا.</string>
    <string name="no_citizen_found">لم يتم العثور على مواطن</string>
    <string name="no_such_citizen_found">لم يتم العثور على مواطن بهذا الوصف.</string>
    <string name="email_field_required">حقل البريد الإلكتروني مطلوب</string>
    <string name="password_required">كلمة المرور مطلوبة</string>
    <string name="name">الاسم:</string>
    <string name="birthdate">تاريخ الميلاد:</string>
    <string name="gender">الجنس:</string>
    <string name="status">الحالة:</string>
    <string name="create_account">إنشاء حساب</string>
    <string name="enter_email_address">أدخل عنوان البريد الإلكتروني</string>
    <string name="ok">موافق</string>
    <string name="cancel">إلغاء</string>
    <string name="account_created_successfully">تم إنشاء الحساب بنجاح!</string>
    <string name="account_creation_failed">فشل إنشاء الحساب:</string>
    <string name="error_setting_uid_for_citizen_with_cin">خطأ في تعيين معرف للمواطن ذو رقم الهوية:</string>
    <string name="uid_set_successfully_for_citizen_with_cin">تم تعيين معرف بنجاح للمواطن ذو رقم الهوية:</string>
    <string name="your_login_details_email">تفاصيل تسجيل الدخول الخاصة بك:\nالبريد الإلكتروني:</string>
    <string name="uploading_files">جارٍ تحميل الملفات...</string>
    <string name="login_as_admin">تسجيل الدخول كمسؤول</string>
    <string name="logout">تسجيل الخروج</string>
    <string name="are_you_sure_you_want_to_logout">هل أنت متأكد أنك تريد تسجيل الخروج؟</string>
    <string name="no_user_found">لم يتم العثور على مستخدم.</string>
    <string name="sign_in_failed">فشل تسجيل الدخول:</string>
    <string name="creating_account">جارٍ إنشاء الحساب...</string>
    <string name="you_are_invited_to_join_the_army_training">أنت مدعو للانضمام إلى التدريب العسكري.</string>
    <string name="you_have_a_court_case_pending_please_resolve_this_before_joining">لديك قضية في المحكمة قيد الانتظار. يرجى حل هذه المشكلة قبل الانضمام.</string>
    <string name="there_is_a_warrant_out_for_your_arrest_please_resolve_this_issue">يوجد أمر اعتقال بحقك. يرجى حل هذه المشكلة.</string>
    <string name="you_are_exempt_from_joining_the_army_training">أنت معفى من الانضمام إلى التدريب العسكري.</string>
    <string name="unknown_status_please_contact_support">حالة غير معروفة. يرجى الاتصال بالدعم.</string>
    <string name="email_is_required">البريد الإلكتروني مطلوب</string>
    <string name="submission_added_successfully">تمت إضافة التقديم بنجاح.</string>
    <string name="failed_to_add_submission">فشلت عملية إضافة التقديم.</string>
    <string name="fetching_user_data">جار استرجاع بيانات المستخدم...</string>
    <string name="no_user_found_with_the_provided_uid">لم يتم العثور على مستخدم باستخدام معرف المستخدم المقدم.</string>
    <string name="please_pick_documents_first">يرجى اختيار المستندات أولاً</string>
    <string name="start_date">تاريخ البدء: %s</string>
    <string name="end_date">%s : تاريخ الانتهاء</string>
    <string name="location">%s : الموقع</string>
    <string name="round_name">اسم الدورة</string>
    <string name="add_round">إضافة الدورة</string>
    <string name="fill_all_fields">يرجى ملء جميع الحقول</string>
    <string name="round_added_successfully">تمت إضافة الدورة بنجاح</string>
    <string name="failed_to_add_round">فشلت إضافة الدورة</string>
    <string name="manager">مدير</string>
    <string name="eligible">مؤهل</string>
    <string name="court">أمر محكمة</string>
    <string name="warrant">مذكرة اعتقال</string>
    <string name="penalis">معاقب</string>
    <string name="exempt">معفى</string>
    <string name="loading">جارٍ التحميل...</string>
    <string name="recruiting_round_alert">تنبيه جولة التجنيد</string>
    <string name="there_s_recruiting_round_that_has_not_ended_yet">هناك جولة تجنيد لم تنتهِ بعد!</string>
    <string name="no_active_recruiting_round_at_the_moment">لا توجد جولة تجنيد نشطة في الوقت الحالي.</string>
    <string name="status_updated_successfully">تم تحديث الحالة بنجاح</string>
    <string name="failed_to_update_status">فشل في تحديث الحالة</string>
    <string name="change_status">تغيير الحالة</string>
    <string name="update_round">تحديث الدورة</string>
    <string name="round_updated_successfully">تم تحديث بنجاح</string>
    <string name="failed_to_update_round">فشل في تحديث \n</string>
    <string name="last_name">اللقب</string>
    <string name="add_citizen">اضافة مواطن</string>
    <string name="update_citizen">تحديث المواطن</string>
    <string name="no_submissions_available">لا يوجد تقديمات متاحة</string>
    <string name="select_action">اختر إجراء</string>
    <string name="edit_round">تعديل الدورة</string>
    <string name="view_citizen_list">عرض قائمة المواطنين</string>
    <string name="signing_in">تسجيل الدخول...</string>


</resources>